--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-d<!doctype html>
+<!doctype html>
 <html lang="en">
 
 <head>
@@ -61,6 +61,7 @@ d<!doctype html>
             width: 1200px;
             margin: 20px auto 20px auto;
         }
+
         .mypost {
             width: 500px;
             margin: 20px auto 20px auto;
@@ -69,6 +70,7 @@ d<!doctype html>
             box-shadow: 0px 0px 3px 0px gray;
 
         }
+
         .mybtn {
             display: flex;
             flex-direction: row;
@@ -76,9 +78,10 @@ d<!doctype html>
             justify-content: center;
 
             margin-top: 20px;
-        
+
         }
-        .mybtn > button {
+
+        .mybtn>button {
             margin-right: 10px;
         }
     </style>
@@ -86,13 +89,24 @@ d<!doctype html>
 
 <body>
     <div class="mytitle">
-        <h1>내 생애 최고의 영화들!!</h1>
+        <h1>내 생애 최고의 영화들!</h1>
         <button>영화 기록하기</button>
     </div>
     <div class="mypost">
         <div class="form-floating mb-3">
             <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
             <label for="floatingInput">영화 URL</label>
+        </div>
+        <div class="input-group mb-3">
+            <label class="input-group-text" for="inputGroupSelect01">별점</label>
+            <select class="form-select" id="inputGroupSelect01">
+                <option selected>--선택하기--</option>
+                <option value="1">⭐</option>
+                <option value="2">⭐⭐</option>
+                <option value="3">⭐⭐⭐</option>
+                <option value="4">⭐⭐⭐⭐</option>
+                <option value="5">⭐⭐⭐⭐⭐</option>
+            </select>
         </div>
         <div class="form-floating">
             <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
